--- a/index.html
+++ b/index.html
@@ -436,6 +436,8 @@
             right: 0;
             width: 360px;
             max-width: calc(100vw - 32px);
+            max-height: calc(100vh - 160px);
+            max-height: min(620px, calc(100vh - 160px));
             background: var(--white);
             border-radius: 22px;
             box-shadow: 0 30px 65px rgba(12, 28, 18, 0.32);
@@ -444,6 +446,8 @@
             transform: translateY(16px);
             pointer-events: none;
             transition: opacity 0.25s ease, transform 0.25s ease;
+            display: flex;
+            flex-direction: column;
         }
 
         .live-chat-window.visible {
@@ -460,6 +464,7 @@
             justify-content: space-between;
             align-items: flex-start;
             gap: 12px;
+            flex-shrink: 0;
         }
 
         .live-chat-header strong {
@@ -496,7 +501,10 @@
         .live-chat-body {
             display: flex;
             flex-direction: column;
+            flex: 1;
+            min-height: 0;
             background: linear-gradient(180deg, rgba(249, 249, 249, 1) 0%, rgba(255, 255, 255, 1) 65%);
+            overflow: hidden;
         }
 
         .live-chat-status-banner {
@@ -530,7 +538,8 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            max-height: 320px;
+            flex: 1;
+            min-height: 0;
             overflow-y: auto;
         }
 
@@ -653,6 +662,7 @@
             display: flex;
             align-items: flex-end;
             gap: 12px;
+            flex-shrink: 0;
         }
 
         .live-chat-form textarea {
@@ -862,16 +872,23 @@
 
             .live-chat-window {
                 position: fixed;
-                bottom: 96px;
+                bottom: 84px;
                 right: auto;
                 left: 50%;
                 width: min(340px, calc(100vw - 28px));
                 max-width: calc(100vw - 28px);
+                max-height: calc(100vh - 140px);
                 transform: translate(-50%, 20px);
+                border-radius: 20px;
             }
 
             .live-chat-window.visible {
                 transform: translate(-50%, 0);
+            }
+
+            .live-chat-form textarea {
+                min-height: 48px;
+                max-height: 110px;
             }
 
             .chat-invite-overlay {
@@ -2815,12 +2832,27 @@
             }
 
             .hero-actions .btn {
-                font-size: 0.93rem;
-                padding: 11px 16px;
+                font-size: 0.88rem;
+                padding: 10px 15px;
+                border-radius: 18px;
             }
 
             .btn {
-                padding: 11px 20px;
+                padding: 10px 18px;
+            }
+
+            .live-chat-window {
+                max-height: calc(100vh - 120px);
+                bottom: 78px;
+                border-radius: 18px;
+            }
+
+            .live-chat-form {
+                padding: 14px 16px 16px;
+            }
+
+            .live-chat-form textarea {
+                min-height: 44px;
             }
 
             .service-content {
@@ -3198,7 +3230,7 @@
     </section>
 
     <div class="character-popup" id="heroCharacterPopup" aria-hidden="true">
-        <div class="character-popup-card" role="dialog" aria-modal="true" aria-labelledby="characterPopupTitle" aria-describedby="characterPopupDescription">
+        <div class="character-popup-card" role="dialog" aria-modal="true" aria-labelledby="characterPopupDescription" aria-describedby="characterPopupDescription">
             <button type="button" class="character-popup-close" id="characterPopupClose" aria-label="Close welcome spotlight">
                 <i class="fas fa-times" aria-hidden="true"></i>
             </button>
@@ -3206,7 +3238,6 @@
                 <img src="static/images/cool-character.svg" alt="Animated gardener wearing sunglasses" class="character-popup-illustration">
                 <div class="character-popup-content">
                     <span class="character-popup-eyebrow"><i class="fas fa-bolt" aria-hidden="true"></i> Spotlight</span>
-                    <h3 class="character-popup-title" id="characterPopupTitle">Meet your sensational lawn hero</h3>
                     <p class="character-popup-copy" id="characterPopupDescription">Our cartoon crew chief, Sparky, keeps the garden energy high. After a quick ten-second breather, he pops in with fresh ideas so you can jump straight into our standout services.</p>
                     <div class="character-popup-actions">
                         <a href="#services" class="btn" id="characterPopupCta">Explore services</a>
