Adjust mobile hero overlay dimensions

--- a/index.html
+++ b/index.html
@@ -2807,14 +2807,15 @@
             }
 
             .hero-slide .container {
-                padding-top: 130px;
-                padding-bottom: 72px;
+                padding-top: 100px;
+                padding-bottom: 52px;
             }
 
             .hero-content {
-                padding: 24px 20px;
-                border-radius: 20px;
-                gap: 16px;
+                padding: 18px;
+                border-radius: 18px;
+                gap: 14px;
+                background: linear-gradient(150deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.3));
             }
 
             .hero-actions {
