Adjust mobile hero callout position and timing

--- a/index.html
+++ b/index.html
@@ -2594,14 +2594,14 @@
             }
 
             .hero-slide {
-                align-items: flex-end;
+                align-items: flex-start;
                 justify-content: flex-start;
                 background-position: center 62%;
             }
 
             .hero-slide .container {
-                padding-top: 140px;
-                padding-bottom: 90px;
+                padding-top: 110px;
+                padding-bottom: 36px;
             }
 
             .hero-content {
@@ -2619,6 +2619,7 @@
                 flex-direction: column;
                 align-items: flex-start;
                 text-align: left;
+                transition: opacity 1.4s ease, transform 1.4s ease;
             }
 
             .hero h1 {
@@ -2807,8 +2808,8 @@
             }
 
             .hero-slide .container {
-                padding-top: 100px;
-                padding-bottom: 52px;
+                padding-top: 88px;
+                padding-bottom: 28px;
             }
 
             .hero-content {
