Update FAQ pricing details

--- a/index.html
+++ b/index.html
@@ -3067,9 +3067,9 @@
                 </article>
                 <article class="faq-card">
                     <h3>How much do you charge?</h3>
-                    <p>I consistently receive feedback that my rates are highly competitive. I ensure thorough care and attention for every garden.</p>
-                    <p>For example, the average cost is £35 for a 70-minute visit, and I often spend considerably more time at the same rate. Rest assured, green waste removal comes at no additional cost.</p>
-                    <p>I need to see the garden to give you a price.</p>
+                    <p>I constantly receive feedback that my rates are too low for the effort and attention I put into each job.</p>
+                    <p>My rates for a small garden start from £10 per visit, which can be arranged on a regular basis throughout the gardening season or as a one-off tidy up.</p>
+                    <p>I still prefer to see your garden first so I can give you an accurate price.</p>
                 </article>
                 <article class="faq-card">
                     <h3>What can you do for me?</h3>
