--- a/index.html
+++ b/index.html
@@ -1171,6 +1171,7 @@
             min-height: 80vh;
             color: var(--white);
             overflow: hidden;
+            margin-top: clamp(12px, 2vw, 24px);
         }
 
         .hero-slide {
@@ -2989,45 +2990,62 @@
                 <span class="logo-icon" aria-hidden="true">
                     <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-hidden="true">
                         <defs>
-                            <radialGradient id="logo-badge-gradient" cx="32" cy="24" r="34" gradientUnits="userSpaceOnUse">
-                                <stop offset="0%" stop-color="#f1ffde" />
-                                <stop offset="45%" stop-color="#9bd889" />
-                                <stop offset="100%" stop-color="#1b5e20" />
+                            <radialGradient id="logo-badge-gradient" cx="0.5" cy="0.2" r="0.85">
+                                <stop offset="0%" stop-color="#f5ffe8" />
+                                <stop offset="55%" stop-color="#b5f1a6" />
+                                <stop offset="100%" stop-color="#1f6a28" />
                             </radialGradient>
-                            <linearGradient id="logo-horizon-gradient" x1="12" y1="20" x2="52" y2="44" gradientUnits="userSpaceOnUse">
-                                <stop offset="0%" stop-color="rgba(255, 255, 255, 0.8)" />
-                                <stop offset="40%" stop-color="rgba(200, 255, 214, 0.35)" />
-                                <stop offset="100%" stop-color="rgba(255, 255, 255, 0)" />
-                            </linearGradient>
-                            <linearGradient id="logo-deck-gradient" x1="18" y1="34" x2="52" y2="54" gradientUnits="userSpaceOnUse">
+                            <linearGradient id="logo-ground-gradient" x1="14" y1="46" x2="50" y2="56" gradientUnits="userSpaceOnUse">
                                 <stop offset="0%" stop-color="#66bb6a" />
                                 <stop offset="50%" stop-color="#2e7d32" />
-                                <stop offset="100%" stop-color="#0c3818" />
+                                <stop offset="100%" stop-color="#0c3f18" />
                             </linearGradient>
-                            <linearGradient id="logo-handle-gradient" x1="28" y1="18" x2="56" y2="32" gradientUnits="userSpaceOnUse">
-                                <stop offset="0%" stop-color="#d7fff0" />
-                                <stop offset="50%" stop-color="#8be3c2" />
-                                <stop offset="100%" stop-color="#2c8d57" />
+                            <linearGradient id="logo-stripe-gradient" x1="16" y1="42" x2="48" y2="48" gradientUnits="userSpaceOnUse">
+                                <stop offset="0%" stop-color="rgba(255, 255, 255, 0.55)" />
+                                <stop offset="100%" stop-color="rgba(255, 255, 255, 0)" />
                             </linearGradient>
-                            <radialGradient id="logo-wheel-gradient" cx="0.5" cy="0.4" r="0.7">
+                            <linearGradient id="logo-deck-gradient" x1="18" y1="36" x2="50" y2="48" gradientUnits="userSpaceOnUse">
+                                <stop offset="0%" stop-color="#e0ffef" />
+                                <stop offset="45%" stop-color="#47b46a" />
+                                <stop offset="100%" stop-color="#0f5b2a" />
+                            </linearGradient>
+                            <linearGradient id="logo-top-gradient" x1="26" y1="30" x2="46" y2="38" gradientUnits="userSpaceOnUse">
+                                <stop offset="0%" stop-color="#f4fff6" />
+                                <stop offset="40%" stop-color="#9be8b8" />
+                                <stop offset="100%" stop-color="#2a8150" />
+                            </linearGradient>
+                            <linearGradient id="logo-handle-gradient" x1="28" y1="14" x2="56" y2="30" gradientUnits="userSpaceOnUse">
+                                <stop offset="0%" stop-color="#dffff3" />
+                                <stop offset="50%" stop-color="#8be7c6" />
+                                <stop offset="100%" stop-color="#2d9470" />
+                            </linearGradient>
+                            <radialGradient id="logo-wheel-gradient" cx="0.5" cy="0.45" r="0.7">
                                 <stop offset="0%" stop-color="#ffffff" />
-                                <stop offset="45%" stop-color="#90a4ae" />
-                                <stop offset="100%" stop-color="#263238" />
+                                <stop offset="45%" stop-color="#b0bec5" />
+                                <stop offset="100%" stop-color="#1b2429" />
+                            </radialGradient>
+                            <radialGradient id="logo-glow-gradient" cx="0.5" cy="0.1" r="0.9">
+                                <stop offset="0%" stop-color="rgba(255, 255, 255, 0.65)" />
+                                <stop offset="100%" stop-color="rgba(255, 255, 255, 0)" />
                             </radialGradient>
                         </defs>
-                        <circle cx="32" cy="32" r="26" fill="url(#logo-badge-gradient)" />
-                        <path d="M8.8 36.5c6.6-7.6 15.1-11.5 23.2-11.5s16.6 3.9 23.2 11.5V40H8.8z" fill="url(#logo-horizon-gradient)" opacity="0.7" />
-                        <path d="M11.4 33.8c5.8-8.5 13.7-13.3 20.6-13.3 6.9 0 14.7 4.8 20.6 13.3" fill="none" stroke="rgba(255, 255, 255, 0.7)" stroke-width="2.2" stroke-linecap="round" />
-                        <path d="M29.8 27.6l14.2-11.4c1.2-0.9 2.8-0.8 3.7 0.3l5.1 5.9c1.1 1.2 0.6 3.1-0.9 3.9l-6.4 3.4" fill="none" stroke="url(#logo-handle-gradient)" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M17.8 36.4h21.3c4.7 0 8.8 2.9 10.1 7.1l1.5 4.9c0.6 1.9-0.9 3.8-2.9 3.8H20.6c-1.3 0-2.4-0.8-2.8-2.1l-2.1-6.6c-1-3.1 1.2-6.3 4.1-7.1z" fill="url(#logo-deck-gradient)" />
-                        <path d="M24.5 36.4c-2.8 0.7-4.6 3.5-3.9 6.3l0.5 2c0.3 1.1 1.3 1.9 2.4 1.9h19.4c1.2 0 2.2-0.8 2.4-2l0.5-2.5c0.5-2.7-1.4-5.2-4-5.7" fill="none" stroke="rgba(255, 255, 255, 0.22)" stroke-width="2" stroke-linecap="round" />
-                        <circle cx="24" cy="46" r="4.6" fill="url(#logo-wheel-gradient)" />
-                        <circle cx="42.5" cy="46.4" r="5.4" fill="url(#logo-wheel-gradient)" />
-                        <circle cx="24" cy="46" r="1.5" fill="rgba(255, 255, 255, 0.6)" />
-                        <circle cx="42.5" cy="46.4" r="1.9" fill="rgba(255, 255, 255, 0.55)" />
-                        <path d="M18.8 28.2c2.7 1.6 5.9 1.6 8.6 0" fill="none" stroke="rgba(255, 255, 255, 0.45)" stroke-width="2.2" stroke-linecap="round" />
-                        <path d="M22.2 18.8c2.1-1.5 4.6-2.5 7.3-2.7" fill="none" stroke="rgba(255, 255, 255, 0.35)" stroke-width="2" stroke-linecap="round" />
-                        <path d="M44.6 24.8l2.1 2.4" stroke="rgba(255, 255, 255, 0.8)" stroke-width="2" stroke-linecap="round" />
+                        <circle cx="32" cy="32" r="27" fill="url(#logo-badge-gradient)" />
+                        <circle cx="32" cy="22" r="18" fill="url(#logo-glow-gradient)" opacity="0.65" />
+                        <path d="M14 45c4.8 4 12 6 18 6s13.2-2 18-6v6H14z" fill="url(#logo-ground-gradient)" />
+                        <path d="M18 43c4 2.4 8.8 3.6 14 3.6S42 45.4 46 43" fill="none" stroke="url(#logo-stripe-gradient)" stroke-width="3.2" stroke-linecap="round" opacity="0.8" />
+                        <path d="M26.5 28.5L44 17.2c1.5-0.9 3.4-0.5 4.4 0.9l4.6 6.4c1 1.3 0.4 3.2-1.3 3.9l-7.9 3.1" fill="none" stroke="url(#logo-handle-gradient)" stroke-width="3.4" stroke-linecap="round" stroke-linejoin="round" />
+                        <g>
+                            <path d="M18.6 36.8h22.4c4.4 0 8.5 2.5 10.5 6.4l2.1 4.1c0.8 1.6-0.4 3.5-2.2 3.5H20.8c-1.2 0-2.3-0.7-2.7-1.8l-2.1-5.7c-1.1-3.1 1.2-6.5 4.6-6.5z" fill="url(#logo-deck-gradient)" />
+                            <path d="M24.4 34.8h16.5c2 0 3.9 1.2 4.6 3.1l1.4 3.5H22.1l-0.8-2.4c-0.8-2.7 1.3-5.4 4-5.4z" fill="url(#logo-top-gradient)" />
+                            <path d="M24 37c-2.8 0.6-4.6 3.4-3.9 6.2l0.6 2.2c0.3 1.1 1.3 1.9 2.4 1.9h20.4c1.2 0 2.2-0.8 2.5-2l0.5-2.6c0.5-2.8-1.5-5.5-4.3-5.9" fill="none" stroke="rgba(255, 255, 255, 0.28)" stroke-width="2.2" stroke-linecap="round" />
+                        </g>
+                        <circle cx="24.5" cy="47.2" r="4.8" fill="url(#logo-wheel-gradient)" />
+                        <circle cx="42.8" cy="47.6" r="5.6" fill="url(#logo-wheel-gradient)" />
+                        <circle cx="24.5" cy="47.2" r="1.6" fill="rgba(255, 255, 255, 0.65)" />
+                        <circle cx="42.8" cy="47.6" r="1.9" fill="rgba(255, 255, 255, 0.6)" />
+                        <path d="M20 30.4c3.2 1.4 6.6 1.4 9.8 0" fill="none" stroke="rgba(255, 255, 255, 0.5)" stroke-width="2.4" stroke-linecap="round" />
+                        <path d="M23.2 20.8c2.5-1.8 5.4-2.9 8.6-3.1" fill="none" stroke="rgba(255, 255, 255, 0.38)" stroke-width="2.2" stroke-linecap="round" />
+                        <path d="M44.2 24.5l2.6 3" stroke="rgba(255, 255, 255, 0.82)" stroke-width="2" stroke-linecap="round" />
                     </svg>
                 </span>
                 <span class="logo-wordmark">
