Remove character spotlight popup

--- a/index.html
+++ b/index.html
@@ -3542,24 +3542,7 @@
         </div>
     </section>
 
-    <div class="character-popup" id="heroCharacterPopup" aria-hidden="true">
-        <div class="character-popup-card" role="dialog" aria-modal="true" aria-labelledby="characterPopupDescription" aria-describedby="characterPopupDescription">
-            <button type="button" class="character-popup-close" id="characterPopupClose" aria-label="Close welcome spotlight">
-                <i class="fas fa-times" aria-hidden="true"></i>
-            </button>
-            <div class="character-popup-body">
-                <img src="static/images/cool-character.svg" alt="Animated gardener wearing sunglasses" class="character-popup-illustration">
-                <div class="character-popup-content">
-                    <span class="character-popup-eyebrow"><i class="fas fa-bolt" aria-hidden="true"></i> Spotlight</span>
-                    <p class="character-popup-copy" id="characterPopupDescription">Our cartoon crew chief, Sparky, keeps the garden energy high. After a quick ten-second breather, he pops in with fresh ideas so you can jump straight into our standout services.</p>
-                    <div class="character-popup-actions">
-                        <a href="#services" class="btn" id="characterPopupCta">Explore services</a>
-                        <button type="button" class="btn character-popup-secondary" id="characterPopupDismiss">Maybe later</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Character spotlight popup removed to prevent it from appearing to visitors -->
 
     <div class="modal-overlay" id="bookingModal" aria-hidden="true">
         <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="bookingModalTitle">
