--- a/index.html
+++ b/index.html
@@ -2796,13 +2796,13 @@
             }
 
             .hero-content {
-                max-width: 100%;
                 width: 100%;
-                margin: 0;
-                padding: 28px 24px;
+                max-width: 420px;
+                margin: 0 auto;
+                padding: 26px 24px;
                 border-radius: 24px;
                 border: 1px solid rgba(255, 255, 255, 0.12);
-                background: linear-gradient(150deg, rgba(0, 0, 0, 0.42), rgba(0, 0, 0, 0.18));
+                background: linear-gradient(150deg, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.2));
                 gap: 18px;
                 box-shadow: 0 22px 52px rgba(0, 0, 0, 0.38);
                 backdrop-filter: blur(8px);
@@ -2835,10 +2835,33 @@
             }
 
             .hero-title-mobile {
-                display: block;
-                font-size: clamp(1.45rem, 6.8vw, 2.55rem);
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.45em;
+                padding: 0.4em 0.9em;
+                border-radius: 999px;
+                font-size: clamp(1.6rem, 6.8vw, 2.6rem);
                 line-height: 1.05;
-                letter-spacing: -0.012em;
+                letter-spacing: 0.06em;
+                text-transform: uppercase;
+                font-weight: 700;
+                color: #ffffff;
+                background: linear-gradient(135deg, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0.05));
+                border: 1px solid rgba(255, 255, 255, 0.18);
+                box-shadow: 0 18px 34px rgba(0, 0, 0, 0.35);
+                text-shadow: 0 8px 22px rgba(0, 0, 0, 0.45);
+            }
+
+            .hero-title-mobile::after {
+                content: '\f061';
+                font-family: 'Font Awesome 6 Free';
+                font-weight: 900;
+                font-size: 0.75em;
+                padding: 0.25em;
+                border-radius: 50%;
+                background: rgba(255, 255, 255, 0.18);
+                box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.22);
             }
 
             .hero-actions .btn {
